deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slack-auto-attendant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: slack-auto-attendant
  template:
    metadata:
      labels:
        app: slack-auto-attendant
    spec:
      containers:
        - name: slack-auto-attendant
          image: image-registry.openshift-image-registry.svc:5000/bechen/slack-auto-attendant:latest
          ports:
            - containerPort: 3000
          args: ["--slack"]
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: slack-auto-attendant-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: slack-auto-attendant
spec:
  selector:
    app: slack-auto-attendant
  ports:
    - name: http
      port: 80
      targetPort: 9000
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: slack-auto-attendant
spec:
  to:
    kind: Service
    name: slack-auto-attendant
  port:
    targetPort: http
  tls:
    termination: edge
